--- a/_config.yml
+++ b/_config.yml
@@ -53,10 +53,10 @@ theme_mode: dark # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn:
+img_cdn: 
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: 'assets/avatar.jpeg'
 
 # boolean type, the global switch for TOC in posts.
 toc: true
